<resources>
    <string name="app_name">Assignment3_CourseRegistrationApp</string>
    <string name="courses">Courses</string>
    <string name="course_name">Course Name</string>
    <string name="course_id">Course ID</string>
    <string name="course_term">Term</string>
    <string name="course_pre">Prerequisite</string>
    <string name="course_status">Current Status</string>
    <string name="register">Register</string>
    <string name="unregister">Unregister</string>
    <string name="registered_courses">Registered Courses</string>
    <string name="completed">Completed</string>
    <string name="registered">Registered</string>
    <string name="not_registered">Not Registered</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Course</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="course_type">Course Type</string>
    <string name="course_name_req">Course Name*</string>
    <string name="course_id_req">Course Id*</string>
    <string name="course_term_req">Course Term*</string>
    <string name="course_prerequisite_req">Course Prerequisite*</string>
    <string name="course_type_req">Course Type*</string>
    <string name="save_action">Save</string>
    <string name="course_cancel">Cancel</string>
    <string name="success_register_message">You have Successfully Registered for this course</string>
    <string name="completed_course_message">You Have already Completed the course</string>
    <string name="already_registered_message">You have already been Registered for this course</string>
    <string name="term_full_message">3 Courses have already been registered for Term %1$s. No more Courses can be added</string>
    <string name="prerequisite_not_satisfied_message">Prerequisite not completed. You cannot register for this course</string>
    <string name="logout_message">You have successfully Logged Out</string>
    <string name="student_login_fragment_label">Student Login</string>
    <string name="student_registration_fragment_label">Student Registration</string>
    <string name="course_list_fragment_label">Home</string>
    <string name="admin_login_fragment_label">Admin Login</string>
    <string name="admin_add_fragment_label">Edit Or Add</string>
    <string name="registered_course_fragment_label">Registered Courses for {studentId}</string>
    <string name="all_user_registered_fragment_label">All Users Courses</string>
    <string name="course_detail_fragment_label">Course Details For {courseId}</string>
    <string name="home">Home</string>
    <string name="course_registration">Course Registration</string>
    <string name="student_id">Student ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="go_to_admin_login">Go To Admin Login</string>
    <string name="admin_id">Admin ID</string>
    <string name="go_to_user_login">Go to User Login</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_id">Enter Your ID</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="retype_password">ReType Password</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="logout">Logout</string>
    <string name="admin_control_access">Admin Control Access</string>
    <string name="add_new_item">Add New Item</string>
    <string name="all_users_registered_course">All Users Registered Course</string>
    <string name="delete">Delete</string>
    <string name="edit_course">Edit Course</string>
    <string name="user_id_already_exists">User ID already Exists</string>
</resources>