<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightest_blue"
    tools:context=".fragments.admin.AdminLoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tvAdminLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/course_registration"
            android:textAlignment="center"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/tvAdminLoginSubtitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAdminLoginSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/admin_login_fragment_label"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/etAdminLoginId"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAdminLoginTitle" />

        <EditText
            android:id="@+id/etAdminLoginId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_custom"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@."
            android:hint="@string/admin_id"
            android:importantForAutofill="no"
            android:inputType="textFilter"
            android:padding="15dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/etAdminLoginPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAdminLoginSubtitle" />

        <EditText
            android:id="@+id/etAdminLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_custom"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@~`#$%^*()_,./;'[]\?:{}|"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/btAdminLoginSubmit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAdminLoginId" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btAdminLoginSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/login"
            android:textColor="@color/lightest_blue"
            app:cornerRadius="18dp"
            app:layout_constraintBottom_toTopOf="@id/ivAdminLoginToUserLogin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAdminLoginPassword" />


        <ImageView
            android:id="@+id/ivAdminLoginToUserLogin"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/go_to_user_login"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toTopOf="@id/tvSwipeLeft"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btAdminLoginSubmit" />

        <TextView
            android:id="@+id/tvSwipeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/student_login_fragment_label"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivAdminLoginToUserLogin" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>